Investors section - fix collapse, del default open - w\ adaptive.

--- a/src/scss/_components/home/_investors.scss
+++ b/src/scss/_components/home/_investors.scss
@@ -70,14 +70,7 @@
   &__collapse {
 
     &-0 {
-      .investors__collapse-head {
-        i {
-          opacity: 1;
-        }
-      }
       .investors__collapse-body {
-        display: block;
-
         p {
           display: flex;
           justify-content: flex-end;
